# master-thesis

./: .gitignore  pyproject.toml
.hooks/: check_api_keys.py
bentham_temp/: hybrid_zero_shot_comparison.json  hybrid_zero_shot_lines_comparison.json  one_shot_comparison.json  one_shot_hybrid_enhanced_comparison.json  transkribus_aggregate_results.csv  transkribus_document_results.csv  two_shot_comparison.json  two_shot_hybrid_enhanced_comparison.json  zero_shot_comparison.json  zero_shot_lines_comparison.json
bentham_temp_lines/: hybrid_zero_shot_lines_comparison.json  one_shot_hybrid_lines_comparison.json  one_shot_lines_comparison.json  transkribus_aggregate_results.csv  transkribus_all_results.csv  transkribus_document_results.csv  two_shot_hybrid_lines_comparison.json  two_shot_lines_comparison.json  zero_shot_lines_comparison.json
config/: .env.example
notebooks/: line_segmentation.py  temp.py
reichenau_temp/: transkribus_aggregate_results.csv  transkribus_document_results.csv
reichenau_temp_lines/: hybrid_zero_shot_lines_comparison.json  one_shot_hybrid_gt_lines_comparison.json  one_shot_hybrid_lines_comparison.json  one_shot_hybrid_simplified_comparison.json  one_shot_lines_comparison.json  transkribus_aggregate_results.csv  transkribus_document_results.csv  two_shot_hybrid_lines_comparison.json  two_shot_lines_comparison.json  zero_shot_lines_comparison.json
scripts/: resize_images.py
src/: __init__.py  evaluation.py  file_utils.py  metrics.py  transkribus.py  visualization.py
temp/: hybrid_zero_shot_comparison.json  one_shot_comparison.json  (+8 more)
(+3879 files in other folders)
